--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
+set(BOOST_ROOT /usr/include/boost)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Boost 1.71.0  COMPONENTS asio)
+project(twime)
 
+find_package(Boost COMPONENTS asio REQUIRED)
 
+include_directories(${Boost_INCLUDE_DIRS})
 
-project(alfalab)
+add_executable(twime main.cpp)
 
-add_executable(alfalab main.cpp)
+target_link_libraries(twime ${Boost_LIBRARIES})
 
-target_link_libraries(alfalab Boost::asio)
-
-install(TARGETS alfalab RUNTIME DESTINATION bin)
+install(TARGETS twime RUNTIME DESTINATION bin)
