--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,11 @@
 cmake_minimum_required(VERSION 3.0)
-#set(BOOST_ROOT /usr)
 set(Boost_DEBUG ON)
-#set(BOOST_INCLUDEDIR /usr/include)
-#set(BOOST_LIBRARYDIR /usr/lib/x86_64-linux-gnu)
 set(PROJECT twime)
 set(BOOST_COMPONENTS thread system)
-#set(BOOST_USE_STATIC_LIBS ON)
-#set(BOOST_USE_MULTITHREADED ON)
-#set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(BOOST_USE_STATIC_LIBS ON)
+set(BOOST_USE_MULTITHREADED ON)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 
 project(${PROJECT})
